--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180744507-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-180744507-1');
+    </script>
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="BD-ALPDR, The First Open-Accces Bangladeshi Vehicle License Plate Dataset">
