--- a/BD-ALPDR.html
+++ b/BD-ALPDR.html
@@ -25,7 +25,7 @@
     <meta property="og:title" content="BD-ALPDR">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="BD-ALPDR.html" data-home-page-title="BD-ALPDR" class="u-body"><header class="u-align-left u-black u-clearfix u-header u-header" id="sec-7ce0"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-align-left u-black u-clearfix u-header u-header" id="sec-7ce0"><div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-heading-font u-text u-text-default u-title u-text-1">BD-ALPDR</h1>
         <h2 class="u-align-center u-text u-text-2">The First Open-Accces Bangladeshi Vehicle License Plate Dataset</h2>
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
