--- a/BD-ALPDR.html
+++ b/BD-ALPDR.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
+    <title>BD-ALPDR : Open-access Bangladeshi Vehicle License Plate Dataset.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="BD-ALPDR, The First Open-Accces Bangladeshi Vehicle License Plate Dataset">
-    <meta name="description" content="">
+    <meta name="keywords" content="BD-ALPDR, The First Open-Accces Bangladeshi Vehicle License Plate Dataset, ALPDR, Dataset, Bangladesh">
+    <meta name="description" content="Website for the first ever open-access Bangladeshi Vehicle License Plate Dataset">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>BD-ALPDR</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -533,8 +534,24 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-90 u-footer" id="sec-f451"><div class="u-align-left u-clearfix u-sheet u-sheet-1">
-        <p class="u-align-center u-text u-text-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/cc_nc_sa.png" alt=""></span>&nbsp;<br> This dataset is licensed under a&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+        <p class="u-align-center u-text u-text-1"> &nbsp;<br> This dataset is licensed under a&nbsp;<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
         </p>
-	</div></footer>
+        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+          <div class="u-layout">
+            <div class="u-layout-row">
+              <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1"><span class="u-align-right u-file-icon u-icon u-icon-1"><img src="images/cc_nc_sa.png" alt=""></span>
+                </div>
+              </div>
+              <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
+                <div class="u-container-layout u-valign-bottom u-container-layout-2">
+                  <p class="u-text u-text-default u-text-2"> © 2020. All rights Reserved.<br>Contact: nooruddinimad@gmail.com
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div></footer>
   </body>
 </html>
