removed footer. Added metadata.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;">
   <head>
+    <title>BD-ALPDR : Open-access Bangladeshi Vehicle License Plate Dataset.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="BD-ALPDR, The First Open-Accces Bangladeshi Vehicle License Plate Dataset">
-    <meta name="description" content="">
+    <meta name="keywords" content="BD-ALPDR, The First Open-Accces Bangladeshi Vehicle License Plate Dataset, ALPDR, Dataset, Bangladesh">
+    <meta name="description" content="Website for the first ever open-access Bangladeshi Vehicle License Plate Dataset">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>BD-ALPDR</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -551,17 +552,6 @@
             </div>
           </div>
         </div>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
+	    </div></footer>
   </body>
 </html>
